# tulip-accounting

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  justfile  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  mutation.yml  schemathesis-thorough.yml
deploy/docker/: .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PHASE_0_CHECKLIST.md  PHASE_STATUS.md  QUICKSTART.md  RECOVERY.md  SECURITY_OPS.md  THREAT_MODEL.md  TUI_WIREFRAMES.md  USER_RIGHTS.md
docs/adrs/: 0001-envelope-shadow-ledger.md  0002-scheduler-primitive.md  0003-mutation-testing.md  0004-reconciliation.md  0005-ai-integration.md  0006-ci-test-runtime.md  0007-terminal-ui.md  0008-bills-data-model.md  0009-tag-redesign.md
docs/audits/: 2026-05-12-deep-security-audit.md  2026-05-13-deep-privacy-audit.md
docs/quickstart-fixtures/: sample-statement.ofx
